# translator_api

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  api.http  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: docker.yml
app/api/: dependencies.py  endpoints.py  main.py  schemas.py  translation.py
app/core/: config.py  models.py  service.py  translator.py
app/core/cache/: base.py  memory.py  redis.py
app/core/providers/: base.py  deepl.py
tests/: test_cache.py  test_endpoints.py  test_providers.py  test_redis_cache.py  test_service.py
