[project]
name = "translator-api"
version = "0.1.0"
description = "Middleware API for text translation services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.1",
]

[tool.uv]
default-groups = ["dev"]
